headerにロゴを追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand navbar-dark bg-dark ">
-    <%= link_to "ホーム", root_path, class: 'navbar-brand' %>
+    <a class="navbar-brand" href="/">Houday Web Note</a>
     <div id="Navber">
       <ul class="navbar-nav">
         <% if user_signed_in? %>
