--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "受付",root_path, class:'nav-link' %>
+            <%= link_to "受付",receptions_path, class:'nav-link' %>
           </li>
           <li class="nav-item active">
             <%= link_to "連絡帳",root_path, class:'nav-link' %>
@@ -14,7 +14,7 @@
             <%= link_to "月間予定",root_path, class:'nav-link' %>
           </li>
           <li class="nav-item active">
-            <%= link_to "今日の利用状況",root_path, class:'nav-link' %>
+            <%= link_to "今日の利用状況",receptions_path, class:'nav-link' %>
           </li>
           <li class="nav-item active">
             <%= link_to 'アカウント編集', edit_user_registration_path, class:'nav-link' %>
