受付の有無による条件分岐をviewファイルshowに追加

--- a/app/views/receptions/show.html.erb
+++ b/app/views/receptions/show.html.erb
@@ -1,7 +1,11 @@
 <p>うけつけ</p>
-<div>
+<% if @reception.nil? %>
+  <p>OK</p>
+<% elsif @reception.leave.nil? %>
   <%= @reception.arrive %>
-</div>
-<div>
+  <p>OK</p>
+<% else %>
+  <%= @reception.arrive %>
   <%= @reception.leave %>
-</div>
+  <p>OK</p>
+<% end %>
