--- a/app/views/receptions/_reception_card.html.erb
+++ b/app/views/receptions/_reception_card.html.erb
@@ -1,31 +1,21 @@
+<section class="card border-dark mt-5" >
+  <div class="card-header">
+    <h4>なまえ：<%= current_user.name %></h4>
+  </div>
+  <div class="card-body">
+    <p class="card-text">きたじかん：
+      <%= l @reception.arrive unless @reception.nil? %>
+    </p>
+  </div>
+  <div class="card-body">
+    <p class="card-text">かえるじかん：
+      <%= l @reception.leave unless @reception.nil? || @reception.leave.nil? %>
+    </p>
+  </div>
+</section>
+<%= link_to "もどる", root_path, class: 'btn btn-primary mt-3 btn-block' %>
 <% if @reception.nil? %>
-  <section class="card border-dark mt-5" >
-    <div class="card-header">
-      <h4>なまえ：<%= current_user.name %></h4>
-    </div>
-    <div class="card-body">
-      <p class="card-text">きたじかん：</p>
-    </div>
-    <div class="card-body">
-      <p class="card-text">かえるじかん：</p>
-    </div>
-  </section>
-  <%= link_to "もどる", root_path, class: 'btn btn-primary mt-3 btn-block' %>
-  <%= link_to 'ついたよ', receptions_path, method: :patch, remote: true, class: 'btn btn-success mt-3 btn-block' %>
+  <%= link_to 'ついたよ', receptions_path, method: :patch, class: 'btn btn-success mt-3 btn-block', remote: true %>
 <% else %>
-  <section class="card border-dark mt-5" >
-    <div class="card-header">
-      <h4>なまえ：<%= current_user.name %></h4>
-    </div>
-    <div class="card-body">
-      <p class="card-text">きたじかん：<%= l @reception.arrive %></p>
-    </div>
-    <div class="card-body">
-      <p class="card-text">かえるじかん：
-        <%= l @reception.leave if @reception.leave.present? %>
-      </p>
-    </div>
-  </section>
-  <%= link_to "もどる", root_path, class: 'btn btn-primary mt-3 btn-block' %>
   <%= link_to 'かえるよ', receptions_path, method: :patch, class: 'btn btn-success mt-3 btn-block', remote: true if @reception.nil? || @reception.leave.nil? %>
 <% end %>
