--- a/app/views/receptions/_reception_card.html.erb
+++ b/app/views/receptions/_reception_card.html.erb
@@ -4,18 +4,18 @@
   </div>
   <div class="card-body">
     <p class="card-text">きたじかん：
-      <%= l @reception.arrive unless @reception.nil? %>
+      <%= l @reception.arrive if @reception.present? %>
     </p>
   </div>
   <div class="card-body">
     <p class="card-text">かえるじかん：
-      <%= l @reception.leave unless @reception.nil? || @reception.leave.nil? %>
+      <%= l @reception.leave if @reception.present? && @reception.leave.present? %>
     </p>
   </div>
 </section>
 <%= link_to "もどる", root_path, class: 'btn btn-primary mt-3 btn-block' %>
 <% if @reception.nil? %>
   <%= link_to 'ついたよ', receptions_path, method: :patch, class: 'btn btn-success mt-3 btn-block', remote: true %>
-<% else %>
-  <%= link_to 'かえるよ', receptions_path, method: :patch, class: 'btn btn-success mt-3 btn-block', remote: true if @reception.nil? || @reception.leave.nil? %>
+<% elsif @reception.leave.nil? %>
+  <%= link_to 'かえるよ', receptions_path, method: :patch, class: 'btn btn-success mt-3 btn-block', remote: true %>
 <% end %>
