--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
             <%= link_to "連絡帳",notes_path, class:'nav-link' %>
           </li>
           <li class="nav-item active">
-            <%= link_to "月間予定",root_path, class:'nav-link' %>
+            <%= link_to "月間予定",edit_calendars_path, class:'nav-link' %>
           </li>
           <li class="nav-item active">
             <%= link_to "今日の利用状況",receptions_path, class:'nav-link' %>
