--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -1,6 +1,5 @@
-<%= Gon::Base.render_data %>
 <%= form_with url: calendars_path, method: :put, local: true do |form| %>
-  <input class ="edit_calendar" type="text" name="calendar[date]" placeholder="利用日を選んでください" readonly="readonly" >
+  <input id ="edit_calendar" type="text" name="calendar[date]" placeholder="利用日を選んでください" readonly="readonly" >
   <%= form.submit "送信" %>
 </div>
 <% end %>
