--- a/app/views/homes/_buttons.html.erb
+++ b/app/views/homes/_buttons.html.erb
@@ -1,3 +1,8 @@
 <% if user_signed_in? %>
-  <div>4buttons</div>
+  <div class="button-container">
+    <div class="index-button">うけつけ</div>
+    <div class="index-button">連絡帳</div>
+    <div class="index-button">月間予定</div>
+    <div class="index-button">利用状況</div>
+  </div>
 <% end %>
