--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,23 +4,24 @@
  *= require_tree .
  *= require_self
  */
-
  .mw-md {
    max-width: 576px;
  }
-
  .mw-xl {
    max-width: 1200px;
  }
 
- 
- 
+ header {
+   overflow: hidden;
+ }
+
  @import "bootstrap/scss/bootstrap";
 
  $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
  @import "@fortawesome/fontawesome-free/scss/fontawesome";
  @import "@fortawesome/fontawesome-free/scss/regular";
-
+ 
+// 連絡帳のindexページのボタン
 .btn-third {
   	width:33.33333%;
   	/* 未対応ブラウザ用 */
@@ -29,6 +30,6 @@
   	width:calc(100% / 3);
 }
 
-header {
-  overflow: hidden;
-}
+
+
+
