--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -1,5 +1,11 @@
-<%= form_with url: calendars_path, method: :put, local: true do |form| %>
-  <input id ="edit_calendar" type="text" name="calendar[date]" placeholder="利用日を選んでください" readonly="readonly" >
-  <%= form.submit "送信" %>
+<h4 class="text-center">利用したい日付をクリックして、送信ボタンをおしてください。</h4>
+<div class ="calendar">
+  <%= form_with url: calendars_path, method: :put, local: true do |form| %>
+    <input id ="edit_calendar" type="text" name="calendar[date]" placeholder="利用日を選んでください" readonly="readonly" >
+    <%= form.submit "送信", class: "btn btn-primary btn-block calendar-submit" %>
+  <% end %>
 </div>
-<% end %>
+<%# gifファイルの貼り付け %>
+<%# <img src="/assets/sample_play.gif" id="guide-calendar"
+  onclick="this.setAttribute('src', this.getAttribute('src').replace(/assets/_play.gif/g, '.gif'));"
+  style="cursor: pointer;"> %>
