--- a/app/views/homes/_slideshow.html.erb
+++ b/app/views/homes/_slideshow.html.erb
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide carousel-fade mb-3" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
