headerの項目を右寄せに変更

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -35,3 +35,12 @@
   color: #FEA993;
 }
 
+.button-text {
+  color: #FEA993;
+}
+
+.font {
+  font-family: 'Hiragino Maru Gothic Pro',
+'ヒラギノ丸ゴ Pro W4',
+sans-serif;
+}
