--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -1,4 +1,6 @@
-<h4 class="text-center">利用したい日付をクリックして、送信ボタンをおしてください。</h4>
+  
+<h4 class="container text-center font">希望利用日を選択して、<br>
+  送信ボタンをおしてください。</h4>
 <div class ="calendar">
   <%= form_with url: calendars_path, method: :put, local: true do |form| %>
     <input id ="edit_calendar" type="text" name="calendar[date]" placeholder="利用日を選んでください" readonly="readonly" >
