--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,5 @@
-<h1 class="text-center">連絡帳一覧 </h1>
-<h3>名前:<%= current_user.name %></h3>
+<h1 class="text-center font">連絡帳一覧 </h1>
+<h3 class="font">名前:<%= current_user.name %></h3>
 <div class="my-4">
   <%= link_to "今日の連絡帳を記入する", new_note_path, class: "btn btn-primary btn-block" %>
 </div>
