--- a/app/views/receptions/_reception_card.html.erb
+++ b/app/views/receptions/_reception_card.html.erb
@@ -1,4 +1,4 @@
-<section class="card border-dark mt-5" >
+<section class="card border-dark mt-5 font" >
   <div class="card-header">
     <h4>なまえ：<%= current_user.name %></h4>
   </div>
