--- a/app/views/receptions/show.html.erb
+++ b/app/views/receptions/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center">うけつけじかん</h1>
+<h1 class="text-center font">うけつけじかん</h1>
 <div id="card-reception">
-  <%= render "reception_card" %>
+  <%= render "reception_card"%>
 </div>
