--- a/app/views/homes/_buttons.html.erb
+++ b/app/views/homes/_buttons.html.erb
@@ -1,8 +1,16 @@
 <% if user_signed_in? %>
   <div class="button-container">
-    <div class="index-button">うけつけ</div>
-    <div class="index-button">連絡帳</div>
-    <div class="index-button">月間予定</div>
-    <div class="index-button">利用状況</div>
+    <div class="index-button">
+      <%= link_to "うけつけ",receptions_path, class: "button-text" %>
+    </div>
+    <div class="index-button">
+      <%= link_to "連絡帳",notes_path, class: "button-text" %>
+    </div>
+    <div class="index-button">
+      <%= link_to "月間利用",edit_calendars_path, class: "button-text" %>
+    </div>
+    <div class="index-button">
+      <%= link_to "利用状況",receptions_path, class: "button-text" %>
+    </div>
   </div>
 <% end %>
