--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark bg-dark ">
+  <nav class="navbar navbar-expand navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Houday Web Note</a>
-    <div id="Navber">
-      <ul class="navbar-nav">
+    <div class="collapse navbar-collapse justify-content-end">
+      <ul class="nav navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item active">
             <%= link_to "受付",receptions_path, class:'nav-link' %>
