連絡帳機能の詳細ページをパステルカラーテーブルに変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,10 @@
    overflow: hidden;
  }
 
+ .dorpdown-toggler {
+ 	border-color: rgba(0, 0, 0, 0);
+ }
+
  @import "bootstrap/scss/bootstrap";
 
  $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
