--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <nav class="navbar navbar-expand navbar-dark bg-dark text-align-center">
     <a class="navbar-brand" href="/">Houday Web Note</a>
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="nav navbar-nav">
