--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -2,7 +2,11 @@
 <%= form_with model: @note, local: true do |f| %>
   <div class="form-group">
     <%= f.label :date %>
-    <%= f.date_field :date, value: Date.current, class: "form-control" %>
+    <% if controller.controller_name == 'notes' && controller.action_name == 'edit' %>
+      <%= f.date_field :date, value: @note.date, class: "form-control" %>
+    <% else %>
+      <%= f.date_field :date, value: Date.current, class: "form-control" %>
+    <% end %>
   </div>
   <div>
     <%= f.label :condition %>
@@ -14,12 +18,20 @@
   </div>
   <div class="form-group">
     <%= f.label :temp %>
-    <%= f.number_field :temp, in: 35.0..40.0, step: "0.1", value: "36.0", class: "form-control" %>
+    <% if controller.controller_name == 'notes' && controller.action_name == 'edit' %>
+      <%= f.number_field :temp, in: 35.0..40.0, step: "0.1", value: @note.temp, class: "form-control" %>
+    <% else %>
+      <%= f.number_field :temp, in: 35.0..40.0, step: "0.1", value: "36.0", class: "form-control" %>
+    <% end %>
   </div>
   <div class="form-group">
     <%= f.label :message %>
-    <%= f.text_field :message, value: "よろしくおねがいします。", class: "form-control" %>
-    <small id="messageHelp" class="form-text text-muted">おこさまの様子や気になることがあればご記入ください</small>
+    <% if controller.controller_name == 'notes' && controller.action_name == 'edit' %>
+      <%= f.text_field :message, value: @note.message, class: "form-control" %>
+    <% else %>
+      <%= f.text_field :message, value: "よろしくおねがいします", class: "form-control" %>
+      <small id="messageHelp" class="form-text text-muted">おこさまの様子や気になることがあればご記入ください</small>
+    <% end %>
   </div>
   <div>
     <%= f.submit "送信", class: "btn btn-primary btn-block" %>
