--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,2 +1,7 @@
 <h1 class="text-center">連絡帳の編集</h1>
-<%= render "form" %>
+<% if current_user.id == @note.user.id %>
+  <%= render "form" %>
+  <%= link_to "連絡帳一覧へ", notes_path, class: "btn btn-block btn-success mt-3" %>
+<% else %>
+  <%= redirect_to root_path %>
+<% end %>
