--- a/app/views/homes/_buttons.html.erb
+++ b/app/views/homes/_buttons.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
   <div class="button-container">
     <div class="index-button">
-      <%= link_to "うけつけ",receptions_path, class: "button-text" %>
+      <%= link_to "うけつけ",edit_receptions_path, class: "button-text" %>
     </div>
     <div class="index-button">
       <%= link_to "連絡帳",notes_path, class: "button-text" %>
