--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "受付",receptions_path, class:'nav-link' %>
+            <%= link_to "受付",edit_receptions_path, class:'nav-link' %>
           </li>
           <li class="nav-item active">
             <%= link_to "連絡帳",notes_path, class:'nav-link' %>
