--- a/app/views/receptions/show.html.erb
+++ b/app/views/receptions/show.html.erb
@@ -1,4 +1,32 @@
-<h1 class="text-center font">うけつけじかん</h1>
-<div id="card-reception">
-  <%= render "reception_card"%>
-</div>
+<% if current_user.id == @reception.user.id %>
+  <h1 class="font text-center mb-3">今日の利用状況</h1>
+  <table class="osare-table osare-hikaku col4t text-center">
+    <thead>
+      <tr>
+        <th>日付</th>
+        <th>来所時間</th>
+        <th>退所時間</th>
+        <th>利用の有無</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th><%=l @reception.arrive %></th>
+        <td><%=l @reception.arrive, format: :short %></td>
+        <td><%=l @reception.leave, format: :short %></td>
+        <td>
+          <% if @reception.arrive.present? && @reception.leave.nil? %>
+            現在利用中
+          <% elsif @reception.present? && @reception.leave.present? %>
+            現在送迎中
+          <% else %>
+            利用予定あり
+          <% end %>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <%= link_to "もどる", root_path, class: "btn btn-block btn-primary mt-3" %>
+<% else %>
+  <%= redirect_to root_path %>
+<% end %>
