各ビューファイルのボタンの幅をw-50に変更

--- a/app/assets/stylesheets/calendars.scss
+++ b/app/assets/stylesheets/calendars.scss
@@ -11,3 +11,13 @@
 #edit_calendar {
   display: none;
 }
+
+.stitch {
+  color: #fff;
+  padding: 10px, 20px;
+  font-size: 22px;
+  background: #FEA993;
+  border: 2px dashed #F7F9CC;
+  border-radius: 10px;
+  box-shadow: 0 0 0 7px #FEA993;
+}
