--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -33,7 +33,7 @@
       <small id="messageHelp" class="form-text text-muted">おこさまの様子や気になることがあればご記入ください</small>
     <% end %>
   </div>
-  <div>
-    <%= f.submit "送信", class: "btn btn-primary btn-block" %>
+  <div class="d-flex justify-content-center">
+    <%= f.submit "送信", class: "btn btn-primary btn-block w-50" %>
   </div>
 <% end %>
