--- a/app/views/receptions/edit.html.erb
+++ b/app/views/receptions/edit.html.erb
@@ -1,4 +1,6 @@
-<h1 class="text-center font">うけつけじかん</h1>
+<div class="d-flex justify-content-center">
+  <div class="stitch font text-center mb-4 w-50">うけつけ</div>
+</div>
 <div id="card-reception">
   <%= render "reception_card"%>
 </div>
