.DSファイルの削除、receptionコントローラのnewアクションに値を追加

--- a/app/views/receptions/_reception_card.html.erb
+++ b/app/views/receptions/_reception_card.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="card-body">
       <p class="card-text">きたじかん：
-        <%= l @reception.arrive, format: :short if @reception.present? %>
+        <%= l @reception&.arrive, format: :short if @reception.present? %>
       </p>
     </div>
     <div class="card-body">
