--- a/app/views/homes/_slideshow.html.erb
+++ b/app/views/homes/_slideshow.html.erb
@@ -6,21 +6,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/assets/houday1.jpg" alt="First slide">
+      <%= image_tag asset_path("houday1.jpg", alt: "First slide"), class: "d-block w-100" %>
       <div class="carousel-caption d-none d-md-block">
         <h5>This is a sample picture!</h5>
         <p>This is a sample text!</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/assets/houday2.jpg" alt="Second slide">
+      <%= image_tag asset_path("houday2.jpg", alt: "Second slide"), class: "d-block w-100" %>
       <div class="carousel-caption d-none d-md-block">
         <h5>This is a sample picture!</h5>
         <p>This is a sample text!</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/assets/houday3.jpg" alt="Third slide">
+      <%= image_tag asset_path("houday3.jpg", alt: "Third slide"), class: "d-block w-100" %>
       <div class="carousel-caption d-none d-md-block">
         <h5>This is a sample picture!</h5>
         <p>This is a sample text!</p>
