連絡帳機能のメッセージを300文字以内になるようバリデーションの追加、フラッシュ機能の追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
   <body>
     <%= render "layouts/header" %>
+    <%= render "layouts/flash" %>
     <div class="container-fluid py-4 <%= devise_controller? ? 'mw-md' : 'mw-xl' %>">
       <%= yield %>
     </div>
