--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,14 @@
   	width:calc(100% / 3);
 }
 
+.alert-notice {
+	@extend .alert-success;
+}
+
+.alert-alert {
+	@extend .alert-danger;
+}
+
 
 
 
