--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,39 +1,41 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark bg-dark text-align-center">
-    <a class="navbar-brand" href="/">Houday Web Note</a>
-    <div class="collapse navbar-collapse justify-content-end">
-      <ul class="nav navbar-nav">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "受付",edit_receptions_path, class:'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to "連絡帳",notes_path, class:'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to "月間予定",edit_calendars_path, class:'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to "今日の利用状況",receptions_path, class:'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to 'アカウント編集', edit_user_registration_path, class:'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class:'nav-link', data: {confirm: "ログアウトしますか？"} %>
-          </li>
-        <% else %>
-          <li class="nav-item active">
-            <%= link_to "新規登録", new_user_registration_path, class:'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to "ログイン", new_user_session_path, class:'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to 'ゲストログイン(閲覧用)', users_guest_sign_in_path, method: :post, class:'nav-link' %>
-          </li>
-        <% end %>
+  <div class="logo d-flex justify-content-center align-items-center pt-3 font">
+    <%= link_to '放課後等デイサービス専用アプリ Houday Web Note', root_path, class:'text-center text-dark' %>
+  </div>
+  <div class="box14 font">
+    <% if user_signed_in? %>
+      <ul id="nav">
+        <li>
+          <%= link_to "受付",edit_receptions_path, class:'nav-link' %>
+        </li>
+        <li>
+          <%= link_to "連絡帳",notes_path, class:'nav-link' %>
+        </li>
+        <li>
+          <%= link_to "月間予定",edit_calendars_path, class:'nav-link' %>
+        </li>
+        <li>
+          <%= link_to "今日の利用状況",receptions_path, class:'nav-link' %>
+        </li>
+        <li>
+          <%= link_to 'アカウント編集', edit_user_registration_path, class:'nav-link' %>
+        </li>
+        <li>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class:'nav-link', data: {confirm: "ログアウトしますか？"} %>
+        </li>
       </ul>
-    </div>
-  </nav>
+    <% else %>
+      <ul id="nav">
+        <li>
+          <%= link_to "新規登録", new_user_registration_path, class:'nav-link' %>
+        </li>
+        <li>
+          <%= link_to "ログイン", new_user_session_path, class:'nav-link' %>
+        </li>
+        <li>
+          <%= link_to 'ゲストログイン(閲覧用)', users_guest_sign_in_path, method: :post, class:'nav-link' %>
+        </li>
+      </ul>
+    <% end %>
+  </div>
 </header>
