--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="my-4 d-flex justify-content-center">
-  <%= link_to "今日の連絡帳を記入する", new_note_path, class: "btn btn-primary btn-block　w-50" %>
+  <%= link_to "今日の連絡帳を記入する", new_note_path, class: "btn btn-primary btn-block　w-auto px-5" %>
 </div>
 <table class="table table-bordered table-striped mt-4">
   <thead class="text-center table-head">
