--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -32,5 +32,5 @@
     <%= link_to "連絡帳編集", edit_note_path(@note), class: "btn btn-block btn-success w-50 mb-3" %>
   </div>
   <div class="d-flex justify-content-center">
-    <%= link_to "連絡帳一覧へ", notes_path, class: "btn btn-block btn-primary w-50" %>
+    <%= link_to "もどる", root_path, class: "btn btn-block btn-primary w-50" %>
   </div>
