--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,102 +6,99 @@
 */
 @import "bootstrap/scss/bootstrap";
 
-$fa-font-path: '@fortawesome/fontawesome-free/webfonts';
+$fa-font-path: "@fortawesome/fontawesome-free/webfonts";
 @import "@fortawesome/fontawesome-free/scss/fontawesome";
 @import "@fortawesome/fontawesome-free/scss/regular";
 
-
 .mw-md {
-   max-width: 576px;
- }
- .mw-xl {
-   max-width: 1200px;
- }
+  max-width: 576px;
+}
+
+.mw-xl {
+  max-width: 1200px;
+}
 
 // ↓ヘッダーcss
 
 header {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 .navbar-brand {
-	font-size: clamp(12px, 3vw, 20px);
+  font-size: clamp(12px, 3vw, 20px);
 }
 
 .navbar {
-	justify-content: space-evenly;
-	padding: 0.5rem 0rem 0.5rem 1rem;
+  justify-content: space-evenly;
+  padding: 0.5rem 0rem 0.5rem 1rem;
 }
 
 .navbar-light .navbar-toggler {
-	border-color: rgba(0, 0, 0, 0);
+  border-color: rgba(0, 0, 0, 0);
 }
-
-
 
 #nav {
-	list-style: none;
-	display: flex;
-	padding: 0 0 12px 0;
-	justify-content: center;
-	align-items: center;
+  list-style: none;
+  display: flex;
+  padding: 0 0 12px 0;
+  justify-content: center;
+  align-items: center;
 }
 
- #nav li {
-	 width: 140px;
- 	text-align: center;
- 	height: 50px;
- 	line-height: 50px;
- 	margin-right: 2px;
+#nav li {
+  width: 140px;
+  text-align: center;
+  height: 50px;
+  line-height: 50px;
+  margin-right: 2px;
 }
 
 #nav li a {
-	white-space: nowrap;
-	text-decoration: none;
- 	color:black;
- 	font-weight: bold;
-	 padding:20px;
-	}
-	//  ↑ここまでヘッダー
-	
-	.stitch-blue {
-		font-size: 20px;
-		padding: 0.2em 0.5em;
-		margin: 1em 0 0.5em 0;
-		background: #d6ebff;
-		box-shadow: 0px 0px 0px 10px #d6ebff;
-		border: dashed 2px white;
-	}
-	
-	.stitch {
-		font-size: 20px;
-		padding: 0.2em 0.5em;
-		margin: 1em 0 0.5em 0;
-		background: #FEA993;
-		box-shadow: 0px 0px 0px 10px #FEA993;
-		border: dashed 2px white;
-	}
-	
-	.stitch-blue p {
-		margin: 0;
-		padding: 0;
-	}
-	
-	// 連絡帳のindexページのボタン
-	.btn-third {
-		width:33.33333%;
-  	/* 未対応ブラウザ用 */
-  	width:-webkit-calc(100% / 3);
-  	/* ベンダープレフィックス */
-  	width:calc(100% / 3);
+  white-space: nowrap;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  padding: 20px;
+}
+//  ↑ここまでヘッダー
+
+.stitch-blue {
+  font-size: 20px;
+  padding: 0.2em 0.5em;
+  margin: 1em 0 0.5em 0;
+  background: #d6ebff;
+  box-shadow: 0px 0px 0px 10px #d6ebff;
+  border: dashed 2px white;
+}
+
+.stitch {
+  font-size: 20px;
+  padding: 0.2em 0.5em;
+  margin: 1em 0 0.5em 0;
+  background: #fea993;
+  box-shadow: 0px 0px 0px 10px #fea993;
+  border: dashed 2px white;
+}
+
+.stitch-blue p {
+  margin: 0;
+  padding: 0;
+}
+
+// 連絡帳のindexページのボタン
+.btn-third {
+  width: 33.33333%;
+  /* 未対応ブラウザ用 */
+  width: -webkit-calc(100% / 3);
+  /* ベンダープレフィックス */
+  width: calc(100% / 3);
 }
 
 // フラッシュ設定
 .alert-notice {
-	@extend .alert-success;
+  @extend .alert-success;
 }
 
 .alert-alert {
-	@extend .alert-danger;
+  @extend .alert-danger;
 }
-
