--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -11,11 +11,10 @@
   color: #fff;
   padding: 20px;
   font-size: 22px;
-  background: #FEA993;
-  border: 2px dashed #F7F9CC;
+  background: #fea993;
+  border: 2px dashed #f7f9cc;
   border-radius: 10px;
-  box-shadow: 0 0 0 7px #FEA993;
-  
+  box-shadow: 0 0 0 7px #fea993;
 }
 
 .index-button {
@@ -23,24 +22,20 @@
   justify-content: center;
   align-items: center;
   width: clamp(60px, 15vw, 150px);
-  height: clamp(60px,15vw, 150px);
+  height: clamp(60px, 15vw, 150px);
   font-size: clamp(12px, 3vw, 20px);
-  background-color:#F7F9CC;
+  background-color: #f7f9cc;
   border-radius: 50%;
   white-space: nowrap;
-  font-family: 'Hiragino Maru Gothic Pro',
-  'ヒラギノ丸ゴ Pro W4',
-  sans-serif;
+  font-family: "Hiragino Maru Gothic Pro", "ヒラギノ丸ゴ Pro W4", sans-serif;
   font-weight: bold;
-  color: #FEA993;
+  color: #fea993;
 }
 
 .button-text {
-  color: #FEA993;
+  color: #fea993;
 }
 
 .font {
-  font-family: 'Hiragino Maru Gothic Pro',
-'ヒラギノ丸ゴ Pro W4',
-sans-serif;
+  font-family: "Hiragino Maru Gothic Pro", "ヒラギノ丸ゴ Pro W4", sans-serif;
 }
