--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,11 +28,6 @@ header {
   font-size: clamp(12px, 3vw, 20px);
 }
 
-.navbar {
-  justify-content: space-evenly;
-  padding: 0.5rem 0rem 0.5rem 1rem;
-}
-
 .navbar-light .navbar-toggler {
   border-color: rgba(0, 0, 0, 0);
 }
@@ -59,17 +54,9 @@ header {
   color: black;
   font-weight: bold;
   padding: 20px;
+  font-size: clamp(12px, 3vw, 20px);
 }
 //  ↑ここまでヘッダー
-
-.stitch-blue {
-  font-size: 20px;
-  padding: 0.2em 0.5em;
-  margin: 1em 0 0.5em 0;
-  background: #d6ebff;
-  box-shadow: 0px 0px 0px 10px #d6ebff;
-  border: dashed 2px white;
-}
 
 .stitch {
   font-size: 20px;
@@ -77,6 +64,14 @@ header {
   margin: 1em 0 0.5em 0;
   background: #fea993;
   box-shadow: 0px 0px 0px 10px #fea993;
+  border: dashed 2px white;
+}
+.stitch-blue {
+  font-size: 20px;
+  padding: 0.2em 0.5em;
+  margin: 1em 0 0.5em 0;
+  background: #d6ebff;
+  box-shadow: 0px 0px 0px 10px #d6ebff;
   border: dashed 2px white;
 }
 
@@ -101,4 +96,17 @@ header {
 
 .alert-alert {
   @extend .alert-danger;
+}
+
+.font {
+  font-family: "Hiragino Maru Gothic Pro", "ヒラギノ丸ゴ Pro W4", sans-serif;
+}
+.font-size {
+  font-size: clamp(12px, 3vw, 20px);
+}
+
+@media screen and (min-width: 768px) {
+  .br-sp {
+    display: none;
+  }
 }
