--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header>
   <div class="stitch-blue d-flex justify-content-center align-items-center pt-3 font">
-    <%= link_to '放課後等デイサービス専用アプリ Houday Web Note', root_path, class:'text-center text-dark pb-3' %>
+    <%= link_to '<span class="d-none d-md-inline">放課後等デイサービス専用アプリ　</span>Houday Web Note'.html_safe, root_path, class:'text-center text-dark pb-3' %>
   </div>
   <% if user_signed_in? %>
-    <nav class="navbar navnar-expand-lg navbar-light bg-light pl-5 font">
-      <%= link_to "受付",edit_receptions_path, class:'navbar-brand' %>
+    <nav class="navbar navnar-expand-lg navbar-light bg-light font justify-content-space-between">
+      <%= link_to "受付",edit_receptions_path, class:'navbar-brand ml-4' %>
       <%= link_to "連絡帳",notes_path, class:'navbar-brand' %>
       <%= link_to "月間予定",edit_calendars_path, class:'navbar-brand' %>
       <%= link_to "利用状況",receptions_path, class:'navbar-brand' %>
@@ -27,7 +27,7 @@
     <ul id="nav">
       <li><%= link_to "新規登録", new_user_registration_path, class:'nav-link' %></li>
       <li><%= link_to "ログイン", new_user_session_path, class:'nav-link' %></li>
-      <li><%= link_to 'ゲストログイン(閲覧用)', users_guest_sign_in_path, method: :post, class:'nav-link' %></li>
+      <li><%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class:'nav-link' %></li>
     </ul>
   <% end %>
 </header>
