flatpickrのカレンダーを携帯でもきちんと表示できるよう修正

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,13 +1,9 @@
-<h3 class="text-center font font-size">【今日の日付】 <%= l Date.current, format: :long %></h3>
+<% if controller.controller_name == 'notes' && controller.action_name == 'edit' %>
+  <h3 class="text-center font font-size">【変更日の日付】 <%=l @note.date, format: :long %></h3>
+<% else %>
+  <h3 class="text-center font font-size">【今日の日付】 <%= l Date.current, format: :long %></h3>
+<% end %>
 <%= form_with model: @note, local: true do |f| %>
-  <div class="form-group">
-    <%= f.label :date %>
-    <% if controller.controller_name == 'notes' && controller.action_name == 'edit' %>
-      <%= f.date_field :date, value: @note.date, class: "form-control" %>
-    <% else %>
-      <%= f.date_field :date, value: Date.current, class: "form-control" %>
-    <% end %>
-  </div>
   <div>
     <%= f.label :condition %>
     <%= f.select :condition, Note::CONDITION, {}, { value: "ふつう", class: "custom-select"} %>
