--- a/app/views/receptions/_reception_card.html.erb
+++ b/app/views/receptions/_reception_card.html.erb
@@ -15,9 +15,6 @@
     </div>
   </section>
 </div>
-<div class="d-flex justify-content-center">
-  <%= link_to "もどる", root_path, class: 'btn btn-primary mt-3 btn-block w-75' %>
-</div>
 <% if @reception.nil? %>
   <div class="d-flex justify-content-center">
     <%= link_to 'ついたよ', receptions_path, method: :patch, class: 'btn btn-success mt-3 btn-block w-75', remote: true %>
@@ -25,5 +22,9 @@
 <% elsif @reception.leave.nil? %>
   <div class="d-flex justify-content-center">
     <%= link_to 'かえるよ', receptions_path, method: :patch, class: 'btn btn-success mt-3 btn-block w-75', remote: true %>
+  </div>
+<% else %>
+  <div class="d-flex justify-content-center">
+    <%= link_to "もどる", root_path, class: 'btn btn-primary mt-3 btn-block w-75' %>
   </div>
 <% end %>
