homeのボタンをaタグからボタンへ変更

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -19,6 +19,7 @@
 
 .index-button {
   display: flex;
+  border: none;
   justify-content: center;
   align-items: center;
   width: clamp(60px, 15vw, 130px);
