--- a/app/views/homes/_buttons.html.erb
+++ b/app/views/homes/_buttons.html.erb
@@ -1,16 +1,17 @@
 <% if user_signed_in? %>
   <div class="button-container">
+    <%= button_to "うけつけ",{controller: 'receptions', action: 'edit'},{method: :get, class: "button-text index-button"} %>
     <div class="index-button">
-      <%= link_to "うけつけ",edit_receptions_path, class: "button-text" %>
+      <%= button_to "連絡帳",{controller: 'notes', action: 'index'},{method: :get, class: "button-text index-button"} %>
     </div>
     <div class="index-button">
-      <%= link_to "連絡帳",notes_path, class: "button-text" %>
+      <%= button_to "月間利用日",{controller: 'calendars', action: 'edit'},{method: :edit, class: "button-text index-button"} %>
     </div>
     <div class="index-button">
-      <%= link_to "月間利用",edit_calendars_path, class: "button-text" %>
-    </div>
-    <div class="index-button">
-      <%= link_to "利用状況",receptions_path, class: "button-text" %>
+      <%= button_to receptions_path, method: :get, class: "button-text index-button" do %>
+        今日の<br>
+        利用状況
+      <% end %>
     </div>
   </div>
 <% end %>
