--- a/app/views/homes/_buttons.html.erb
+++ b/app/views/homes/_buttons.html.erb
@@ -5,7 +5,7 @@
       <%= button_to "連絡帳",{controller: 'notes', action: 'index'},{method: :get, class: "button-text index-button"} %>
     </div>
     <div class="index-button">
-      <%= button_to "月間利用日",{controller: 'calendars', action: 'edit'},{method: :edit, class: "button-text index-button"} %>
+      <%= button_to "月間利用日",{controller: 'calendars', action: 'edit'},{method: :get, class: "button-text index-button"} %>
     </div>
     <div class="index-button">
       <%= button_to receptions_path, method: :get, class: "button-text index-button" do %>
@@ -14,4 +14,16 @@
       <% end %>
     </div>
   </div>
-<% end %>
+<% else %>
+  <div class="button-container">
+    <%= button_to "新規登録",{controller: 'users/registrations', action: 'new'},{method: :get, class: "button-text index-button"} %>
+    <div class="index-button">
+      <%= button_to "ログイン",{controller: 'devise/sessions', action: 'new'},{method: :get, class: "button-text index-button"} %>
+    </div>
+    <div class="index-button">
+      <%= button_to users_guest_sign_in_path, method: :post, class: "button-text index-button" do %>
+        ゲスト<br>
+        ログイン
+      <% end %>
+    </div>
+  <% end %>
