--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -36,20 +36,24 @@
 }
 
 /* ヘッダー行　１列ごとの色変え */
-.osare-table thead th:nth-child(1) {
+.bgc-b {
   background: #81d4fa;
 }
 
-.osare-table thead th:nth-child(2) {
+.bgc-p {
   background: #ffbcff;
 }
 
-.osare-table thead th:nth-child(3) {
+.bgc-y {
   background: #ffffb2;
 }
 
-.osare-table thead th:nth-child(4) {
+.bgc-g {
   background: #c4ff89;
+}
+
+.bgc-gr {
+  background: grey;
 }
 
 .osare-table thead th:nth-child(5) {
