--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,36 +1,45 @@
 <h1 class="text-center font">連絡帳の詳細</h1>
-<table class="osare-table osare-hikaku col4t text-center">
+<table class="osare-table osare-hikaku col2t text-center">
   <thead>
     <tr>
-      <th>日付</th>
-      <th>体調</th>
-      <th>機嫌</th>
-      <th>体温</th>
+      <th class="bgc-p">日付</th>
+      <th class="bgc-b">体調</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th><%= l @note.date %></th>
       <td><%= @note.condition %></td>
-      <td><%= @note.humor %></td>
-      <td><%= @note.temp %></td>
     </tr>
   </tbody>
-  <table class="osare-table osare-hikaku col1t text-center mt-3 mb-3">
-    <thead class="message-thead">
+  <table class="osare-table osare-hikaku col2t text-center">
+    <thead>
       <tr>
-        <th>メッセージ</th>
+        <th class="bgc-y">機嫌</th>
+        <th class="bgc-g">体温</th>
       </tr>
-      <tbody>
-        <tr>
-          <td><%= @note.message %></td>
-        </tr>
-      </tbody>
     </thead>
-  </table>
-  <div class="d-flex justify-content-center">
-    <%= link_to "連絡帳編集", edit_note_path(@note), class: "btn btn-block btn-success w-50 mb-3" %>
-  </div>
-  <div class="d-flex justify-content-center">
-    <%= link_to "もどる", root_path, class: "btn btn-block btn-primary w-50" %>
-  </div>
+    <tbody>
+      <tr>
+        <td class="py-4"><%= @note.humor %></td>
+        <td class="py-4"><%= @note.temp %></td>
+      </tr>
+    </tbody>
+    <table class="osare-table osare-hikaku col1t text-center mt-3 mb-3">
+      <thead class="message-thead">
+        <tr>
+          <th class="bgc-gr">メッセージ</th>
+        </tr>
+        <tbody>
+          <tr>
+            <td class="py-5"><%= @note.message %></td>
+          </tr>
+        </tbody>
+      </thead>
+    </table>
+    <div class="d-flex justify-content-center">
+      <%= link_to "連絡帳編集", edit_note_path(@note), class: "btn btn-block btn-success w-50 mb-3" %>
+    </div>
+    <div class="d-flex justify-content-center">
+      <%= link_to "もどる", root_path, class: "btn btn-block btn-primary w-50" %>
+    </div>
