受付と連絡帳の詳細ページのテーブル位置を微調整

--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -12,7 +12,7 @@
 
 .osare-table tbody td {
   border: none !important;
-  background-color: #fff9ff !important;
+  background-color: #f2f5fc !important;
   border-bottom: solid 2px #f9f9f9 !important;
 }
 
