--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -12,7 +12,7 @@
       <td><%= @note.condition %></td>
     </tr>
   </tbody>
-  <table class="osare-table osare-hikaku col2t text-center">
+  <table class="osare-table osare-hikaku col2t text-center mt-3">
     <thead>
       <tr>
         <th class="bgc-y">機嫌</th>
