--- a/app/views/receptions/show.html.erb
+++ b/app/views/receptions/show.html.erb
@@ -25,7 +25,7 @@
     </tr>
   </tbody>
 </table>
-<table class="osare-table osare-hikaku col2t text-center">
+<table class="osare-table osare-hikaku col2t text-center mt-3">
   <thead>
     <tr>
       <th class="bgc-y">来所時間</th>
