--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,8 +1,10 @@
 <div class="d-flex justify-content-center">
   <div class="stitch font text-center mb-4 w-50">
     連絡帳一覧<br class="br-sp">
-    名前:<%= current_user.name %>
   </div>
+</div>
+<div class="font font-size text-center">
+  名前:<%= current_user.name %>
 </div>
 <table class="table table-bordered table-striped mt-4">
   <thead class="text-center table-head">
