--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -32,7 +32,7 @@
         </tr>
         <tbody>
           <tr>
-            <td class="py-5"><%= @note.message %></td>
+            <td class="py-5 text-left px-3"><%= @note.message %></td>
           </tr>
         </tbody>
       </thead>
