--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -18,8 +18,8 @@
     <% @notes.each.with_index(1) do |note, i| %>
       <tr>
         <th scope="row" class="text-center"><%= i %></th>
-        <td class="break-word text-center "><%= l note.date, format: :short %></td>
-        <td class="text-nowrap text-center">
+        <td class="break-word text-center"><%= l note.date, format: :short %></td>
+        <td class="break-word text-nowrap text-center">
           <%= link_to note, class: "btn btn-info btn-third" do %>
             <i class="fas fa-eye"></i> <span class="d-none d-md-inline">確認</span>
           <% end %>
