--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,2 +1,3 @@
 <h1 class="text-center font">連絡帳の記入</h1>
+<h3 class="text-center font font-size">【今日の日付】 <%= l Date.current, format: :long %></h3>
 <%= render "form" %>
