--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -9,6 +9,33 @@
     <%= form.submit "送信", class: "btn btn-primary btn-block calendar-submit" %>
   <% end %>
 </div>
+<div class="d-flex justify-content-center px-3">
+  <button type="button" class="btn btn-warning btn-block w-100 mt-3" data-toggle="modal" data-target="#exampleModalCenter">
+    <i class="fas fa-exclamation-triangle"></i>　使い方・説明　<i class="fas fa-exclamation-triangle"></i>　
+  </button>
+</div>
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">月間利用日の投稿機能の使い方</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ①カレンダーから利用したい日付をタップ<br>
+        ②日付が青色になっていることを確認し、送信ボタンを押す<br>
+        <br>
+        ※利用日のキャンセルの場合は、青色になっている日付をタップすることでキャンセルできます
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
 <%# gifファイルの貼り付け %>
 <%# <img src="/assets/sample_play.gif" id="guide-calendar"
   onclick="this.setAttribute('src', this.getAttribute('src').replace(/assets/_play.gif/g, '.gif'));"
