--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -35,6 +35,30 @@
   </tbody>
 </table>
 <div class="my-4 d-flex justify-content-center">
-  <%= link_to "今日の連絡帳を記入する", new_note_path, class: "btn btn-primary btn-block　w-auto px-5" %>
+  <%= link_to "今日の連絡帳を記入する", new_note_path, class: "btn btn-primary btn-block w-75" %>
 </div>
-<%= paginate @notes %>
+<div class="d-flex justify-content-center">
+  <button type="button" class="btn btn-warning btn-block w-75 mb-3" data-toggle="modal" data-target="#exampleModalCenter">
+    <i class="fas fa-exclamation-triangle"></i>　使い方・説明　<i class="fas fa-exclamation-triangle"></i>　
+  </button>
+</div>
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">連絡帳一覧ページの説明</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        連絡帳一覧ページでは、過去の連絡帳を閲覧、変更、削除をすることができます<br>
+        <br>
+        "今日の連絡帳を記入する"ボタンをタップすることで連絡帳を作成することができます
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <%= paginate @notes %>
