--- a/app/views/receptions/_reception_card.html.erb
+++ b/app/views/receptions/_reception_card.html.erb
@@ -28,3 +28,30 @@
     <%= link_to "もどる", root_path, class: 'btn btn-primary mt-3 btn-block w-75' %>
   </div>
 <% end %>
+<!-- Button trigger modal -->
+<div class="d-flex justify-content-center">
+  <button type="button" class="btn btn-warning btn-block w-75 mt-3" data-toggle="modal" data-target="#exampleModalCenter">
+    <i class="fas fa-exclamation-triangle"></i>　使い方・解説　<i class="fas fa-exclamation-triangle"></i>
+  </button>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">受付機能の使い方</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ①利用者が施設に到着したら"ついたよ"ボタンをタップします<br>
+        ②利用者が退所したら"かえるよ"ボタンをタップします<br>
+        ※受付を済ませると"今日の利用状況"から詳細が確認できます
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
