カレンダーのボタン幅を変更

--- a/app/assets/stylesheets/calendars.scss
+++ b/app/assets/stylesheets/calendars.scss
@@ -16,8 +16,12 @@
   color: #fff;
   padding: 10px, 20px;
   font-size: 22px;
-  background: #FEA993;
-  border: 2px dashed #F7F9CC;
+  background: #fea993;
+  border: 2px dashed #f7f9cc;
   border-radius: 10px;
-  box-shadow: 0 0 0 7px #FEA993;
+  box-shadow: 0 0 0 7px #fea993;
+}
+
+.calendar-btn {
+  width: 310px !important;
 }
