--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -10,7 +10,7 @@
   <% end %>
 </div>
 <div class="d-flex justify-content-center px-3">
-  <button type="button" class="btn btn-warning btn-block w-100 mt-3" data-toggle="modal" data-target="#exampleModalCenter">
+  <button type="button" class="btn btn-warning btn-block calendar-btn mt-3" data-toggle="modal" data-target="#exampleModalCenter">
     <i class="fas fa-exclamation-triangle"></i>　使い方・説明　<i class="fas fa-exclamation-triangle"></i>
   </button>
 </div>
